# hello-cann

./: .gitignore  COMMUNITY_TASK.md  CONTENT_GUIDE.md  CONTRIBUTING.md  COURSE_OUTLINE.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  content-task.yml
cases/qwen/: README.md
cases/qwen/configs/: benchmark.example.json  lora-sft.example.json  transformers-torch-npu.example.json
cases/qwen/datasets/: README.md
cases/qwen/reports/: inference-baseline-it22hmda.md  inference-baseline-template.md  lora-sft-it22hmda.md  lora-sft-template.md
cases/qwen/scripts/: benchmark.py  merge_lora.py  run_lora_sft.py  run_transformers_torch_npu.py
docs/zh/: index.md
docs/zh/00_environment/: docker.md  environment-checklist.md  index.md  torch-npu-check.md
docs/zh/01_inference/: benchmark.md  index.md  mindie.md  transformers-torch-npu.md  vllm-ascend.md
docs/zh/02_finetune/: dataset-format.md  index.md  lora-single-card.md  peft-principle.md  training-config.md  training-log.md  weight-merge.md
docs/zh/03_profiling/: index.md  profiling-quickstart.md  report-template.md
docs/zh/04_ascendc/: index.md  llm-operators.md  model-integration.md  operator-template.md  vector-add.md
docs/zh/05_cases/: application-projects.md  case-report-template.md  (+2 more)
notebooks/: 00_environment.ipynb  01_inference.ipynb  02_finetune.ipynb  README.md
src/: README.md
src/00_environment/: check_environment.sh
src/04_ascendc/vector_add/: CMakeLists.txt  README.md  add_custom_host.cpp  add_custom_kernel.cpp  add_custom_tiling.h
templates/: case-report.md  experiment-record.md  tutorial-template.md
(+6 files in other folders)
